objects/Merged_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>This field use to relate Merge Account record to the Account record</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Merged Accounts</relationshipLabel>
        <relationshipName>Merged_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is just used to update the merged accounts for push topic generation...please do not consider the value in it.</description>
        <label>Force Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <description>This field is set to true if  current record represents deleted Account. If false means current record represents master account</description>
        <formula>if( Merged_Account_UUID__c  == Master_UUID__c ,false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_UUID__c</fullName>
        <description>This field dispalys the UUID of related Account</description>
        <formula>Account__r.UUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>UUID Of Account</inlineHelpText>
        <label>Master_UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_Account_UUID__c</fullName>
        <description>This field store the UUID of the Account which was deleted while Merging.</description>
        <externalId>true</externalId>
        <label>Merged Account UUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>This object is used to relate accounts with their UUID's as we merge accounts and it get's deleted from Salesforce, but the same account remain in space station when Rest API is hit from space station and account is searched in REST API using UUID then the account from this object, if account is deleted master(Merged) account will be use in REST API</description>
    <label>Merged Account</label>
    <nameField>
        <displayFormat>MA-{000000}</displayFormat>
        <label>Merged Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merged Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>